# glance

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASING.md  index.html  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-06-25-glance-agent-skills.md  2026-06-25-glance-annotations.md  2026-07-07-annotation-visual-ux.md  2026-07-07-diff-since-last-view.md  2026-07-10-opensource-homebrew.md
docs/superpowers/plans/2026-06-25-glance/: plan-phase-1-frontend-core.md  plan-phase-2-rust-core.md  plan-phase-3-ui-wiring.md  plan-phase-4-companion-polish.md  plan.md
docs/superpowers/specs/: 2026-06-25-glance-agent-skills-design.md  2026-06-25-glance-annotations-design.md  2026-06-25-markdown-companion-app-design.md  2026-07-07-annotation-visual-ux-design.md  2026-07-07-diff-since-last-view-design.md  2026-07-08-setup-picker-design.md  2026-07-10-opensource-homebrew-design.md
samples/: rendering-test.md
scripts/: install.sh  prepare-sidecar.sh  release.sh
src/: anchor-capture.test.ts  anchor-capture.ts  annotation-highlight.test.ts  annotation-highlight.ts  annotation-ui.test.ts  annotation-ui.ts  annotations.test.ts  annotations.ts  app.ts  block-expand.ts  build-anchor.test.ts  build-anchor.ts  composer.test.ts  composer.ts  diff.test.ts  diff.ts  document.test.ts  document.ts  editor.ts  frontmatter.test.ts  frontmatter.ts  integration.test.ts  integration.ts  ipc.ts  main.ts  markdown-visible.test.ts  markdown-visible.ts  mermaid-zoom.ts  mermaid.ts  modal.ts  reload.test.ts  reload.ts  renderer.test.ts  renderer.ts  session.test.ts  session.ts  store.test.ts  store.ts  styles.css  theme.test.ts  (+2 more)
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.bundle.conf.json  tauri.conf.json  tauri.sign.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: anchor.rs  annotations.rs  cli.rs  cli_install.rs  lib.rs  main.rs  reviewed.rs  setup.rs  watcher.rs
