[package]
name = "glance"
version = "0.1.0"
description = "Glance markdown companion"
edition = "2021"
# Two bins (glance GUI + glance-mcp). `cargo run` / `tauri dev` need to know
# which is the app, or they error on ambiguity.
default-run = "glance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "glance"
path = "src/main.rs"

[[bin]]
name = "glance-mcp"
path = "src/bin/glance-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
sha1 = "0.10"

